exports[`<LockButton /> matches snapshot of when the app is in read-only mode 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }
  title="Switching back to edit mode not supported yet">
  <IconButton
    disableTouchRipple={false}
    disabled={true}
    iconStyle={Object {}}
    id="lockButton"
    label="Switch to edit mode"
    onTouchTap={[Function]}
    style={
      Object {
        "zIndex": 5,
      }
    }
    tooltipPosition="bottom-center"
    touch={false}>
    <ActionLock />
  </IconButton>
</span>
`;

exports[`<LockButton /> matches snapshot of when the app is not in read-only mode 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }
  title="Click to lock the snippet (this will prevent further changes.)">
  <IconButton
    disableTouchRipple={false}
    disabled={false}
    iconStyle={Object {}}
    id="lockButton"
    label="Switch to read-only mode"
    onTouchTap={[Function]}
    style={
      Object {
        "zIndex": 5,
      }
    }
    tooltipPosition="bottom-center"
    touch={false}>
    <ActionLockOpen />
  </IconButton>
</span>
`;
